Git Tests/force-app/main/default/default/objects/ItensNotaFiscal__c/ItensNotaFiscal__c.object-meta.xml
<CustomObject>
    <label>Item da nota fiscal</label>
    <nameField>
        <displayFormat>{0000000}</displayFormat>
        <label>Item da nota fiscal</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Itens da nota fiscal</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>