Git Tests/force-app/main/default/default/objects/ItensNotaFiscal__c/fields/CategoriaProduto__c.field-meta.xml
<CustomField>
    <fullName>CategoriaProduto__c</fullName>
    <formula>TEXT(Produto__r.CategoriaComercial__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Categoria do Produto</label>
    <type>Text</type>
</CustomField>