Git Tests/force-app/main/default/default/objects/ItensNotaFiscal__c/fields/CodigoItemNotaVenda__c.field-meta.xml
<CustomField>
    <fullName>CodigoItemNotaVenda__c</fullName>
    <externalId>true</externalId>
    <label>Código do item da nota de venda</label>
    <length>255</length>
    <type>Text</type>
</CustomField>