Git Tests/force-app/main/default/default/objects/ItensNotaFiscal__c/fields/FilialCD__c.field-meta.xml
<CustomField>
    <fullName>FilialCD__c</fullName>
    <formula>NotaFiscal__r.Pedido__r.CentroDistribuicao__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Filial CD</label>
    <type>Text</type>
</CustomField>