Git Tests/force-app/main/default/default/objects/ItensNotaFiscal__c/fields/FornecedorProduto__c.field-meta.xml
<CustomField>
    <fullName>FornecedorProduto__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Fornecedor do produto</label>
    <referenceTo>Fornecedor__c</referenceTo>
    <relationshipLabel>Itens da nota fiscal</relationshipLabel>
    <relationshipName>ItensNotaFiscal</relationshipName>
    <type>Lookup</type>
</CustomField>