Git Tests/force-app/main/default/default/objects/ItensNotaFiscal__c/fields/ICMS__c.field-meta.xml
<CustomField>
    <fullName>ICMS__c</fullName>
    <label>ICMS</label>
    <precision>12</precision>
    <scale>6</scale>
    <type>Currency</type>
</CustomField>