Git Tests/force-app/main/default/default/objects/ItensNotaFiscal__c/fields/ItemNotaVenda__c.field-meta.xml
<CustomField>
    <fullName>ItemNotaVenda__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Item da nota de venda</label>
    <referenceTo>ItensNotaFiscal__c</referenceTo>
    <relationshipName>ItensNotaFiscal</relationshipName>
    <type>Lookup</type>
</CustomField>