Git Tests/force-app/main/default/default/objects/ItensNotaFiscal__c/fields/NotaFiscal__c.field-meta.xml
<CustomField>
    <fullName>NotaFiscal__c</fullName>
    <label>Número da Nota Fiscal</label>
    <referenceTo>NotasFiscais__c</referenceTo>
    <relationshipLabel>Itens da nota fiscal</relationshipLabel>
    <relationshipName>ItensNotaFiscal</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>