Git Tests/force-app/main/default/default/objects/ItensNotaFiscal__c/fields/Produto__c.field-meta.xml
<CustomField>
    <fullName>Produto__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Nome do Produto</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Itens da nota fiscal</relationshipLabel>
    <relationshipName>ItensNotaFiscal</relationshipName>
    <type>Lookup</type>
</CustomField>