Git Tests/force-app/main/default/default/objects/ItensNotaFiscal__c/fields/ScoreProduto__c.field-meta.xml
<CustomField>
    <fullName>ScoreProduto__c</fullName>
    <formula>TEXT(NotaFiscal__r.Pedido__r.Score__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Score</label>
    <type>Text</type>
</CustomField>