Git Tests/force-app/main/default/default/objects/ItensNotaFiscal__c/fields/Serie__c.field-meta.xml
<CustomField>
    <fullName>Serie__c</fullName>
    <label>Série</label>
    <length>255</length>
    <type>Text</type>
</CustomField>