Git Tests/force-app/main/default/default/objects/ItensNotaFiscal__c/fields/ValorUnitario__c.field-meta.xml
<CustomField>
    <fullName>ValorUnitario__c</fullName>
    <label>Valor Unitário</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Currency</type>
</CustomField>